2000-01-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: don't use netrc if protocol is specified.
	* ftpclass.cc: don't use s6_addr32, use s6_addr instead (for
	  freebsd-4.0).

2000-01-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.h: move NO_DATE, NO_SIZE here.
	* FileCopy.h: from here.
	* FileCopy.cc: (FileCopyPeerFA::GetStatus) don't return status if
	  session is not open.
	* FtpDirList.cc: parse EPLF listing and show it pretty.
	* FtpListInfo.cc: parse EPLF listing.
	* misc.h: move find_char here.
	* HttpDir.cc: from here; parse EPLF listings from squid.
	* ftpclass.cc: use NO_SIZE and NO_DATE macros.
	* md5.c: don't compile anything if HAVE_MD5.

2000-01-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: (OpenSession) set correct pos in PUT mode;
	  don't call SaveRollback in PUT mode; handle eof in fxp PUT.
	* SMTask.h: ensure STALL|MOVED==MOVED.
	* ftpclass.cc, ftpclass.h: make FlushSendQueue and ReceiveResp
	  return flag indicating progress; OR it with m in Ftp::Do;
	  fix condition of Disconnect in copy mode; fix SwitchToState
	  to not ignore severe errors in copy mode; outline New;
	  (SendCmd2) new method; use it everywhere; new settings use-stat,
	  stat-interval.
	* HttpDir.cc: fix spinning on & in file names when no &amp; etc match.
	* FileCopy.h: make bytes_count protected.
	* FileCopyFtp.cc: increment bytes_count.
	* Http.cc, Http.h, LocalAccess.cc, LocalAccess.h: outline (New).
	* commands.cc: optimize cmd_user; update description for user;
	  update copyright string for year 2000.
	* resource.cc: new settings ftp:use-stat, ftp:stat-interval.

2000-01-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, FileCopyFtp.cc: fixes for FXP.
	* FileCopy.cc: don't set pos to FILE_END; don't try to figure out
	  position in fxp mode; don't try to fake eof in PUT mode;
	  (RateReset) new method.
	* FileCopy.h: (SetFXP) accept argument.